<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    >

    <!--the Background-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FF000000"
        android:padding="16dp">

    <!--and here designing the name of the App on top in  the background-->
    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_to_minutes"
        android:textColor="#E94539"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="italic"
        android:paddingTop="5dp"/>

    </RelativeLayout>

    <!--the foreground-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:background="@color/yellow"
        android:padding="16dp">

    <!--the app functions-->
        <TextView
            android:id="@+id/calculateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate_your"
            android:textColor="#FFD5190B"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:padding="16dp"/>

        <Button
            android:id="@+id/click_to_calculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click_to_calculate"
            android:textColor="#FFFFFFFF"
            android:background="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/calculateText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="8dp"/>

        <TextView
            android:id="@+id/selected_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selected_date"
            android:textColor="#FF000000"
            android:background="#FFFFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/click_to_calculate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/the_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FFFFFFFF"
            android:background="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/selected_date"
            android:layout_centerHorizontal="true"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/in_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_minutes_till_today"
            android:textColor="#FF000000"
            android:background="#FFFFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/the_date"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/the_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#FFFFFFFF"
            android:background="#FF000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_below="@id/in_minutes"
            android:layout_centerHorizontal="true"
            android:padding="10dp"/>

    </RelativeLayout>

</FrameLayout>




















